--- a/RecipeTop/main/templates/main/create.html
+++ b/RecipeTop/main/templates/main/create.html
@@ -350,7 +350,7 @@
 			                    <div class="step-content">
 			                        <br>
 			                        <div class="step-actions">
-										<button type="submit" onclick="return saveForm()" class='waves-effect waves-dark btn teal lighten-1'>Save Recipe</button>
+										<button type="submit" onclick="return saveForm()" class='waves-effect waves-dark btn teal lighten-1 btn-large'>Save Recipe</button>
 			                        </div>
 			                        <br>
 			                    </div>
