--- a/RecipeTop/main/templates/main/edit.html
+++ b/RecipeTop/main/templates/main/edit.html
@@ -26,35 +26,46 @@
 	    <div class="title-wrapper">
 			<h3 id="edit_title">{{recipe.title}} <i class="small material-icons icon-teal">edit</i></h3>
 
-			<div id="title_modal" class="modal">
-				<div class="modal-content">
-					<h4>Edit Title</h4>
-					<br>
-					<div class="input-field">
-						<input type="text" name="title" value="{{recipe.title}}">
-						<label for="title">Title</label>
+			<div id="title_modal" class="modal title_modal_css">
+				<form action="{% url 'edit_title' recipe.id  %}" method="post">
+					<div class="modal-content">
+						<h4>Edit Title</h4>
+						<br>
+						
+							
+							<div class="input-field">
+								<input type="text" name="title" value="{{recipe.title}}">
+								<label for="title">Title</label>
+							</div>
+						
 					</div>
+					<div class="modal-footer">
+						<button type="submit" class=' modal-close waves-effect waves-dark btn teal lighten-1 btn-large'>Save</button>
+						<br>
 				</div>
-				<div class="modal-footer">
-					<a href="#!" class="modal-close waves-effect waves-green btn">Save</a>
-				</div>
+				{% csrf_token %}
+				</form>
 			</div>                          
 		</div>
 	    <p class="description" id="edit_description">
 	            {{recipe.description}} <i class="small material-icons icon-teal">edit</i>
 	    </p>
-	    <div id="description_modal" class="modal">
-			<div class="modal-content">
-				<h4>Edit Description</h4>
-				<br>
-				<div class="input-field">
-					<input type="text" name="description" value="{{recipe.description}}">
-					<label for="description">Description</label>
+	    <div id="description_modal" class="modal description_modal_css">
+	    	<form action="{% url 'edit_description' recipe.id  %}" method="post">
+				<div class="modal-content">
+					<h4>Edit Description</h4>
+					<br>
+					<div class="input-field">
+						<input type="text" name="description" value="{{recipe.description}}">
+						<label for="description">Description</label>
+					</div>
 				</div>
-			</div>
-			<div class="modal-footer">
-				<a href="#!" class="modal-close waves-effect waves-green btn">Save</a>
-			</div>
+				<div class="modal-footer">
+					<button type="submit" class=' modal-close waves-effect waves-dark btn teal lighten-1 btn-large'>Save</button>
+
+				</div>
+				{% csrf_token %}
+			</form>
 		</div>
 	    <div id="edit_ingredients">
 	        <h4>Ingredients <i class="small material-icons icon-teal">edit</i></h4>
@@ -66,6 +77,7 @@
 	                </label>
 	            {% endfor %}
 	        </div>
+
 	    </div>
 	    <div id="ingredients_modal" class="modal ing_modal">
 			<div class="modal-content">
