Fix bug in create-utensils

--- a/RecipeTop/main/templates/main/create.html
+++ b/RecipeTop/main/templates/main/create.html
@@ -148,7 +148,7 @@
 											{% for utensil in utensils %}
 											<td>
 												<label>
-													<input type="checkbox" value="{{utensil}}" name="utensils" required/>
+													<input type="checkbox" value="{{utensil}}" name="utensils"/>
 													<span>{{utensil}}</span>
 												</label>
 											</td>
@@ -219,12 +219,10 @@
                            			<!-- Tags -->
 									<div class="chips chips-autocomplete" id="chip"></div>
                         		</div>
-                        		<br>
                         		<div class="step-actions">
                            			<button class="waves-effect waves-dark btn teal lighten-1 next-step">CONTINUE</button>
                         			<button class="waves-effect waves-dark btn-flat previous-step">BACK</button>
                         		</div>
-                        		<br>
                      		</div>
                   		</li>
 
