--- a/RecipeTop/main/static/main/css/menu.css
+++ b/RecipeTop/main/static/main/css/menu.css
@@ -11,24 +11,21 @@ icon-teal-lightest {
 
 .link-teal-lightest {
   color: #80cbc4;
-  width: 60%;
-  padding-top: 6px;
-  padding-bottom: 6px;
+  width: 100%;
+  height: 80%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+.link-teal-lightest .link-teal-dark {
+  color: #4db6ac;
+  width: 100%;
+  height: 100%;
+  padding-top: 2%;
+  padding-bottom: 2%;
 }
 
 .link-home {
   color: #000000;
-}
-
-.icon-teal-dark {
-  color: #4db6ac;
-}
-
-.link-teal-dark {
-  color: #4db6ac;
-  width: 60%;
-  padding-top: 6px;
-  padding-bottom: 6px;
 }
 
 .Mnavbar {
@@ -218,7 +215,13 @@ section {
 .collapsible-header, .collapsible-body, .collapsible, ul.collapsible > li {
   border-right: 0px !important;
   border-left: 0px !important;
+  border-bottom: 0px !important;
+  border-top: 0px !important;
   box-shadow: 0px;
+}
+
+.collapsible-body {
+  padding: none !important;
 }
 
 /*# sourceMappingURL=menu.css.map */
