--- a/RecipeTop/main/static/main/css/users.css
+++ b/RecipeTop/main/static/main/css/users.css
@@ -16,9 +16,9 @@ body {
   width: 60vw;
   height: 70vh;
   border-radius: 10px;
-  -webkit-box-shadow: 2px 6px 88px 5px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 2px 6px 88px 5px rgba(0, 0, 0, 0.75);
-  box-shadow: 2px 6px 88px 5px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: -1px 3px 15px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: -1px 3px 15px 0px rgba(0,0,0,0.75);
+  box-shadow: -1px 3px 15px 0px rgba(0,0,0,0.75);
 }
 .Micontainer .title {
   display: flex;
@@ -42,12 +42,20 @@ body {
   width: 25%;
   height: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-items: space-around;
+  grid-column-gap: 5%;
   align-items: center;
   flex-flow: column;
   padding-right: 1%;
   padding-left: 1%;
   box-sizing: border-box;
+  border:1px solid gold;
+  margin-right:2%;
+  margin-left:2%;
+  border-radius: 15px;
+  -webkit-box-shadow: -1px 3px 15px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: -1px 3px 15px 0px rgba(0,0,0,0.75);
+  box-shadow: -1px 3px 15px 0px rgba(238, 210, 53, 0.815);
 }
 .Micontainer .users .user:hover {
   cursor: pointer;
