--- a/RecipeTop/main/static/main/scss/menu.scss
+++ b/RecipeTop/main/static/main/scss/menu.scss
@@ -14,28 +14,23 @@ icon-teal-lightest{
 
 .link-teal-lightest{
   color:#80cbc4;
-  width: 60%;
-  padding-top: 6px;
-  padding-bottom: 6px;
+  width: 100%;
+  height:80%;
+  padding-top: 2%;
+  padding-bottom: 2%;
 
+  .link-teal-dark{
+    color:#4db6ac;
+    width: 100%;
+    height:100%;
+    padding-top: 2%;
+    padding-bottom: 2%; 
+  }
 
 }
 .link-home{
   color:#000000;
 
-
-
-}
-
-.icon-teal-dark{
-  color:#4db6ac;
-}
-
-.link-teal-dark{
-  color:#4db6ac;
-  width: 60%;
-  padding-top: 6px;
-  padding-bottom: 6px;
 
 
 }
@@ -265,9 +260,15 @@ section{
 //   padding: 0rem !important;
   border-right: 0px!important;
   border-left: 0px!important;
+  border-bottom: 0px!important;
+  border-top:0px!important;
 //   border-bottom: 0px!important;
   box-shadow: 0px;
 //   background: #fff;
+}
+
+.collapsible-body{
+    padding:none !important;
 }
 
 
