--- a/RecipeTop/main/static/main/scss/users.scss
+++ b/RecipeTop/main/static/main/scss/users.scss
@@ -26,9 +26,9 @@ body{
     // -moz-box-shadow: 6px 25px 52px 10px rgba(0,0,0,0.75);
     // box-shadow: 6px 25px 52px 10px rgba(0,0,0,0.75);
 
-    -webkit-box-shadow: 2px 6px 88px 5px rgba(0,0,0,0.75);
-    -moz-box-shadow: 2px 6px 88px 5px rgba(0,0,0,0.75);
-    box-shadow: 2px 6px 88px 5px rgba(0,0,0,0.75);
+    -webkit-box-shadow: -1px 3px 15px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: -1px 3px 15px 0px rgba(0,0,0,0.75);
+  box-shadow: -1px 3px 15px 0px rgba(0,0,0,0.75);
 
 
     .title{
@@ -69,6 +69,13 @@ body{
             padding-right: 1%;
             padding-left:1%;
             box-sizing: border-box;
+            border:1px solid gold;
+            margin-right:2%;
+            margin-left:2%;
+            border-radius: 15px;
+            -webkit-box-shadow: -1px 3px 15px 0px rgba(0,0,0,0.75);
+            -moz-box-shadow: -1px 3px 15px 0px rgba(0,0,0,0.75);
+            box-shadow: -1px 3px 15px 0px rgba(238, 210, 53, 0.815);
             
             &:hover{
                 cursor:pointer;
