--- a/RecipeTop/main/templates/main/layout.html
+++ b/RecipeTop/main/templates/main/layout.html
@@ -47,11 +47,7 @@
                 
                 <div class="collapsible-body teal lighten-3">
                         <a href={% url 'create' %} class="waves-effect active blue-grey darken-1 link-teal-lightest">Create<i class=" waves-effect material-icons icon-teal-lightest">create</i></a>
-                        <br>
-                        <br>
                         <a href={% url 'search' %} class="waves-effect active blue-grey darken-1 link-teal-lightest">Search<i class="material-icons icon-teal-lightest">search</i></a>
-                        <br>
-                        <br>
                         <a href={% url 'hearted' %} class="waves-effect active blue-grey darken-1 link-teal-lightest">Hearted<i class="material-icons icon-teal-lightest">favorite</i></a>
                 </div>
             </li>
@@ -59,10 +55,13 @@
             <li>
                 <div class="collapsible-header teal lighten-1 "><i class="material-icons">account_circle</i>Account</div>
                 <div class="collapsible-body teal lighten-2">
-                        <a href="" class="waves-effect active blue-grey darken-1 link-teal-dark">Account<i class="material-icons icon-teal-dark">account_circle</i></a>
-                        <br>
-                        <br>
-                        <a href="" class="waves-effect active blue-grey darken-1 link-teal-dark">Settings<i class="material-icons icon-teal-dark">settings</i></a>
+                        <!-- <a href="" class="waves-effect active blue-grey darken-1 link-teal-dark">Account<i class="material-icons icon-teal-dark">account_circle</i></a>
+                        <a href="" class="waves-effect active blue-grey darken-1 link-teal-dark">Settings<i class="material-icons icon-teal-dark">settings</i></a> -->
+                        <!-- <a href={% url 'search' %} class="waves-effect active blue-grey darken-1 link-teal-lightest">Search<i class="material-icons icon-teal-lightest">search</i></a>
+                        <a href="" class="waves-effect active blue-grey darken-1 link-teal-lightest">Hearted<i class="material-icons icon-teal-lightest">favorite</i></a> -->
+                        <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
+
+ 
                 </div>
             </li>
         </ul>
@@ -70,6 +69,16 @@
             <img>
         </div>
     </div>
+    <div id="modal1" class="modal">
+        <div class="modal-content">
+            <h4>Modal Header</h4>
+            <p>A bunch of text</p>
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+        </div>
+    </div>
+                
 
     
         {% block content %}
