--- a/RecipeTop/main/templates/main/layout.html
+++ b/RecipeTop/main/templates/main/layout.html
@@ -59,9 +59,8 @@
                         <a href="" class="waves-effect active blue-grey darken-1 link-teal-dark">Settings<i class="material-icons icon-teal-dark">settings</i></a> -->
                         <!-- <a href={% url 'search' %} class="waves-effect active blue-grey darken-1 link-teal-lightest">Search<i class="material-icons icon-teal-lightest">search</i></a>
                         <a href="" class="waves-effect active blue-grey darken-1 link-teal-lightest">Hearted<i class="material-icons icon-teal-lightest">favorite</i></a> -->
-                        <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
-
- 
+                        <a href='#modal1'class="waves-effect active blue-grey darken-1 link-teal-lightest modal-trigger">User<i class="material-icons icon-teal-lightest">account_circle</i></a>
+                        <a href='#modal2'class="waves-effect active blue-grey darken-1 link-teal-lightest modal-trigger">Search<i class="material-icons icon-teal-lightest">settings</i></a>
                 </div>
             </li>
         </ul>
@@ -78,6 +77,15 @@
             <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
         </div>
     </div>
+    <div id="modal2" class="modal">
+            <div class="modal-content">
+                <h4>Modal Header 2</h4>
+                <p>A bunch of text</p>
+            </div>
+            <div class="modal-footer">
+                <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+            </div>
+        </div>
                 
 
     
