-fixed finished recipe.js
-replaced 1's with chk
-replaced 2's with un
corrected html with django tags

--- a/RecipeTop/main/templates/main/finish_recipe.html
+++ b/RecipeTop/main/templates/main/finish_recipe.html
@@ -25,19 +25,19 @@
 			</div>
 			<h5 class="feedback_msg"> Rate {{recipe.title}}</h5>
 			<div class="star">
-				<img src="../../static/main/img/star2.svg" class="star3 stars" alt="">
-				<img src="../../static/main/img/star2.svg" class="star2 stars" alt="">
-				<img src="../../static/main/img/star2.svg" class="star1 stars" alt="">
-				<img src="../../static/main/img/star2.svg" class="star2 stars" alt="">
-				<img src="../../static/main/img/star2.svg" class="star3 stars" alt="">
+				<img src={% static "main/img/star_un.svg" %}  class="star3 stars" alt="">
+				<img src={% static "main/img/star_un.svg" %}  class="star2 stars" alt="">
+				<img src={% static "main/img/star_un.svg" %}  class="star1 stars" alt="">
+				<img src={% static "main/img/star_un.svg" %}  class="star2 stars" alt="">
+				<img src={% static "main/img/star_un.svg" %}  class="star3 stars" alt="">
 			</div>
 			<h5 class="feedback_msg">How difficult was this recipe?</h5>
 			<div class="difficulty">
-					<img src="../../static/main/img/bc2.svg" class="star3 cakes" alt="">
-					<img src="../../static/main/img/bc2.svg" class="star2 cakes" alt="">
-					<img src="../../static/main/img/bc2.svg" class="star1 cakes" alt="">
-					<img src="../../static/main/img/bc2.svg" class="star2 cakes" alt="">
-					<img src="../../static/main/img/bc2.svg" class="star3 cakes" alt="">
+					<img src={% static "main/img/cakes_un.svg" %}  class="star3 cakes" alt="">
+					<img src={% static "main/img/cakes_un.svg" %}  class="star2 cakes" alt="">
+					<img src={% static "main/img/cakes_un.svg" %}  class="star1 cakes" alt="">
+					<img src={% static "main/img/cakes_un.svg" %}  class="star2 cakes" alt="">
+					<img src={% static "main/img/cakes_un.svg" %}  class="star3 cakes" alt="">
 			</div>
 			<div class="bottom_button">
 				<a class="waves-effect waves-light btn-small disabled dis_btn"><i class="material-icons right">edit</i>Edit</a>
