Fix bug in edit page

--- a/RecipeTop/main/templates/main/edit.html
+++ b/RecipeTop/main/templates/main/edit.html
@@ -257,6 +257,10 @@
 {% block javascript %}
 <script src={% static "main/js/hearted.js" %}></script>
 <script>
+	$(document).ready(function(){
+    	$('select').formSelect();
+  	});
+  	
 	function loadAutoComplete()
 	{
 		$('input.autocomplete').autocomplete({
