--- a/RecipeTop/main/templates/main/layout.html
+++ b/RecipeTop/main/templates/main/layout.html
@@ -70,8 +70,8 @@
     </div>
     <div id="modal1" class="modal">
         <div class="modal-content">
-            <h4>Modal Header</h4>
-            <p>A bunch of text</p>
+            <h4>preferences</h4>
+            <p>user selection</p>
         </div>
         <div class="modal-footer">
             <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
@@ -80,7 +80,7 @@
     <div id="modal2" class="modal">
             <div class="modal-content">
                 <h4>Modal Header 2</h4>
-                <p>A bunch of text</p>
+                <p>Theme</p>
             </div>
             <div class="modal-footer">
                 <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
