changed inside search cards
-changed some style changes inside the cards
-hearts are displayed on the card

--- a/RecipeTop/main/static/main/css/cards.css
+++ b/RecipeTop/main/static/main/css/cards.css
@@ -13,17 +13,20 @@
 
 .float_heart {
   position: absolute;
-  top: 2%;
-  right: 2%;
+  top: 5%;
+  right: 4%;
   z-index: 5;
-  color: pink;
   font-size: 45px;
-  vertical-align: bottom;
 }
 
 .ingredient_props span {
-  vertical-align: top;
+  vertical-align: center;
   margin-left: 2px;
+  font-size: 9px;
+}
+
+.ingredient_props i {
+  vertical-align: top;
 }
 
 .serving_size {
