--- a/RecipeTop/main/static/main/css/finish_recipe.css
+++ b/RecipeTop/main/static/main/css/finish_recipe.css
@@ -11,13 +11,15 @@ body{
     align-items: center;
     width:100%;
     height:100vh; 
-    background:#0ebead;
+    background:#b0bec5;
 }
 .box_container{
     width:60vw;
-    height:75vh;
+    height:70%;
     padding: 5px 10px;
     background:white;
+    margin:auto;
+    border-radius: 2px;
 }
 
 .message{
