--- a/RecipeTop/main/templates/main/finish_recipe.html
+++ b/RecipeTop/main/templates/main/finish_recipe.html
@@ -17,8 +17,10 @@
 		<link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 </head>
 <body>
+	<br>
+	<br>
 	<div class="ending_container">
-		<div class="box_container">
+		<div class="box_container z-depth-2">
 			<div class="message">
 				<h6>Great job! You completed:</h6>
 				<h6>{{recipe.title}}</h6>
